package lld.atm;

public enum TransactionType {
    BALANCE_CHECK, WITHDRAW, DEPOSIT
}
